--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
 
+<body>
+    <header>
+        <!-- Верхня лінія -->
+        <nav>
+            <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студія</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul class="address list">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </header>
+
+    <main>
+        <section>
+            <!-- Фільтр -->
+            <ul class="list">
+                <li><button type="button" class="filter-button">Усі</button></li>
+                <li><button type="button" class="filter-button">Веб-сайти</button></li>
+                <li><button type="button" class="filter-button">Додатки</button></li>
+                <li><button type="button" class="filter-button">Дизайн</button></li>
+                <li><button type="button" class="filter-button">Маркетинг</button></li>
+            </ul>
+        </section>
+        <section>
+            <h2 hidden>Проекти</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="./images/techno.jpg" alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту" width="370">
+                        <figcaption>
+                            <h3 class="header">Технокряк</h3>
+                            <p>Веб-сайт</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/new-orlean-vs-golden-star.jpg" alt="Зображення двох баскетболистів які боряться за м'яч" width="370">
+                        <figcaption>
+                            <h3 class="header">Постер New Orlean vs Golden Star</h3>
+                            <p>Дизайн</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/seafood.jpg" alt="Лого ресторану Seafood на якому зображена риба" width="370">
+                        <figcaption>
+                            <h3 class="header">Ресторан Seafood</h3>
+                            <p>Додаток</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370">
+                        <figcaption>
+                            <h3 class="header">Проєкт Prime</h3>
+                            <p>Маркетинг</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/boxes.jpg" alt="Фото на якому зображено дві невеличкі подарункові коробочки" width="370">
+                        <figcaption>
+                            <h3 class="header">Проєкт Boxes</h3>
+                            <p>Додаток</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/inspiration.jpg" alt="Зображення монітору на якому відкритий сайт з картою світу" width="370">
+                        <figcaption>
+                            <h3 class="header">Inspiration has no Borders</h3>
+                            <p>Веб-сайт</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/limited-edition.jpg" alt="Фото відкритої книги з рызними зображеннями" width="370">
+                        <figcaption>
+                            <h3 class="header">Видання Limited Edition</h3>
+                            <p>Дизайн</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/lab.jpg" alt="Фото ярлику на якому великими літерами написано LAB EL TAG" width="370">
+                        <figcaption>
+                            <h3 class="header">Проєкт LAB</h3>
+                            <p>Маркетинг</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/growing-business.jpg" alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом" width="370">
+                        <figcaption>
+                            <h3 class="header">Growing Business</h3>
+                            <p>Додаток</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <!-- Підвал -->
+        <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+        <address>
+            <ul class="list">
+                <li class="physical-address">м. Київ, пр-т Лесі Українки, 26</li>
+                <li><a href="mailto:info@devstudio.com" class="footer">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
