--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,15 @@
     </header>
 
     <main>
-        <section>
-            <!-- Фільтр -->
-            <ul class="list">
-                <li><button type="button" class="filter-button">Усі</button></li>
-                <li><button type="button" class="filter-button">Веб-сайти</button></li>
-                <li><button type="button" class="filter-button">Додатки</button></li>
-                <li><button type="button" class="filter-button">Дизайн</button></li>
-                <li><button type="button" class="filter-button">Маркетинг</button></li>
-            </ul>
-        </section>
+        <!-- Фільтр -->
+        <ul class="list">
+            <li><button type="button" class="filter-button">Усі</button></li>
+            <li><button type="button" class="filter-button">Веб-сайти</button></li>
+            <li><button type="button" class="filter-button">Додатки</button></li>
+            <li><button type="button" class="filter-button">Дизайн</button></li>
+            <li><button type="button" class="filter-button">Маркетинг</button></li>
+        </ul>
+        <!-- Проекти -->
         <section>
             <h2 hidden>Проекти</h2>
             <ul class="list">
