Змінені заголовки  у портфоліо

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Особливості -->
         <section>
-            <h2 hidden>Особливості</h2>
+            <h2 class="hidden">Особливості</h2>
             <ul class="list">
                 <li>
                     <h3 class="header">УВАГА ДО ДЕТАЛЕЙ</h3>
