--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,15 @@
             <li><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
         <!-- Проекти -->
+        <!-- Виправити!!!! -->
         <section>
-            <h2 hidden>Проекти</h2>
+            <h1 class="hidden">Проекти</h1>
             <ul class="list">
                 <li>
                     <figure>
                         <img src="./images/techno.jpg" alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту" width="370">
                         <figcaption>
-                            <h3 class="header">Технокряк</h3>
+                            <h2 class="header">Технокряк</h2>
                             <p>Веб-сайт</p>
                         </figcaption>
                     </figure>
@@ -53,7 +54,7 @@
                     <figure>
                         <img src="./images/new-orlean-vs-golden-star.jpg" alt="Зображення двох баскетболистів які боряться за м'яч" width="370">
                         <figcaption>
-                            <h3 class="header">Постер New Orlean vs Golden Star</h3>
+                            <h2 class="header">Постер New Orlean vs Golden Star</h2>
                             <p>Дизайн</p>
                         </figcaption>
                     </figure>
@@ -62,7 +63,7 @@
                     <figure>
                         <img src="./images/seafood.jpg" alt="Лого ресторану Seafood на якому зображена риба" width="370">
                         <figcaption>
-                            <h3 class="header">Ресторан Seafood</h3>
+                            <h2 class="header">Ресторан Seafood</h2>
                             <p>Додаток</p>
                         </figcaption>
                     </figure>
@@ -71,7 +72,7 @@
                     <figure>
                         <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370">
                         <figcaption>
-                            <h3 class="header">Проєкт Prime</h3>
+                            <h2 class="header">Проєкт Prime</h2>
                             <p>Маркетинг</p>
                         </figcaption>
                     </figure>
@@ -80,7 +81,7 @@
                     <figure>
                         <img src="./images/boxes.jpg" alt="Фото на якому зображено дві невеличкі подарункові коробочки" width="370">
                         <figcaption>
-                            <h3 class="header">Проєкт Boxes</h3>
+                            <h2 class="header">Проєкт Boxes</h2>
                             <p>Додаток</p>
                         </figcaption>
                     </figure>
@@ -89,7 +90,7 @@
                     <figure>
                         <img src="./images/inspiration.jpg" alt="Зображення монітору на якому відкритий сайт з картою світу" width="370">
                         <figcaption>
-                            <h3 class="header">Inspiration has no Borders</h3>
+                            <h2 class="header">Inspiration has no Borders</h2>
                             <p>Веб-сайт</p>
                         </figcaption>
                     </figure>
@@ -98,7 +99,7 @@
                     <figure>
                         <img src="./images/limited-edition.jpg" alt="Фото відкритої книги з рызними зображеннями" width="370">
                         <figcaption>
-                            <h3 class="header">Видання Limited Edition</h3>
+                            <h2 class="header">Видання Limited Edition</h2>
                             <p>Дизайн</p>
                         </figcaption>
                     </figure>
@@ -107,7 +108,7 @@
                     <figure>
                         <img src="./images/lab.jpg" alt="Фото ярлику на якому великими літерами написано LAB EL TAG" width="370">
                         <figcaption>
-                            <h3 class="header">Проєкт LAB</h3>
+                            <h2 class="header">Проєкт LAB</h2>
                             <p>Маркетинг</p>
                         </figcaption>
                     </figure>
@@ -116,7 +117,7 @@
                     <figure>
                         <img src="./images/growing-business.jpg" alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом" width="370">
                         <figcaption>
-                            <h3 class="header">Growing Business</h3>
+                            <h2 class="header">Growing Business</h2>
                             <p>Додаток</p>
                         </figcaption>
                     </figure>
