--- a/portfolio.html
+++ b/portfolio.html
@@ -1,141 +1,153 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <!-- Верхня лінія -->
-        <nav>
-            <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="address list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+      <!-- Верхня лінія -->
+      <nav>
+        <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
+        <ul class="site-nav list">
+          <li><a class="link" href="./index.html">Студія</a></li>
+          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="contacts list">
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
-        <!-- Фільтр -->
+      <!-- Фільтр -->
+      <section>
         <ul class="list">
-            <li><button type="button" class="filter-button">Усі</button></li>
-            <li><button type="button" class="filter-button">Веб-сайти</button></li>
-            <li><button type="button" class="filter-button">Додатки</button></li>
-            <li><button type="button" class="filter-button">Дизайн</button></li>
-            <li><button type="button" class="filter-button">Маркетинг</button></li>
+          <li><button class="filter-button" type="button">Усі</button></li>
+          <li><button class="filter-button" type="button">Веб-сайти</button></li>
+          <li><button class="filter-button" type="button">Додатки</button></li>
+          <li><button class="filter-button" type="button">Дизайн</button></li>
+          <li><button class="filter-button" type="button">Маркетинг</button></li>
         </ul>
+
         <!-- Проекти -->
-        <!-- Виправити!!!! -->
-        <section>
-            <h1 class="hidden">Проекти</h1>
-            <ul class="list">
-                <li>
-                    <figure>
-                        <img src="./images/techno.jpg" alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту" width="370">
-                        <figcaption>
-                            <h2 class="header">Технокряк</h2>
-                            <p>Веб-сайт</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/new-orlean-vs-golden-star.jpg" alt="Зображення двох баскетболистів які боряться за м'яч" width="370">
-                        <figcaption>
-                            <h2 class="header">Постер New Orlean vs Golden Star</h2>
-                            <p>Дизайн</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/seafood.jpg" alt="Лого ресторану Seafood на якому зображена риба" width="370">
-                        <figcaption>
-                            <h2 class="header">Ресторан Seafood</h2>
-                            <p>Додаток</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370">
-                        <figcaption>
-                            <h2 class="header">Проєкт Prime</h2>
-                            <p>Маркетинг</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/boxes.jpg" alt="Фото на якому зображено дві невеличкі подарункові коробочки" width="370">
-                        <figcaption>
-                            <h2 class="header">Проєкт Boxes</h2>
-                            <p>Додаток</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/inspiration.jpg" alt="Зображення монітору на якому відкритий сайт з картою світу" width="370">
-                        <figcaption>
-                            <h2 class="header">Inspiration has no Borders</h2>
-                            <p>Веб-сайт</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/limited-edition.jpg" alt="Фото відкритої книги з рызними зображеннями" width="370">
-                        <figcaption>
-                            <h2 class="header">Видання Limited Edition</h2>
-                            <p>Дизайн</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/lab.jpg" alt="Фото ярлику на якому великими літерами написано LAB EL TAG" width="370">
-                        <figcaption>
-                            <h2 class="header">Проєкт LAB</h2>
-                            <p>Маркетинг</p>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./images/growing-business.jpg" alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом" width="370">
-                        <figcaption>
-                            <h2 class="header">Growing Business</h2>
-                            <p>Додаток</p>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
-        </section>
+        <h1 class="hidden">Проекти</h1>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/techno.jpg"
+              alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту"
+              width="370"
+            />
+            <h2 class="header-text">Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/new-orlean-vs-golden-star.jpg"
+              alt="Зображення двох баскетболистів які боряться за м'яч"
+              width="370"
+            />
+            <h2 class="header-text">Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/seafood.jpg"
+              alt="Лого ресторану Seafood на якому зображена риба"
+              width="370"
+            />
+            <h2 class="header-text">Ресторан Seafood</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370" />
+            <h2 class="header-text">Проєкт Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/boxes.jpg"
+              alt="Фото на якому зображено дві невеличкі подарункові коробочки"
+              width="370"
+            />
+            <h2 class="header-text">Проєкт Boxes</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img
+              src="./images/inspiration.jpg"
+              alt="Зображення монітору на якому відкритий сайт з картою світу"
+              width="370"
+            />
+            <h2 class="header-text">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/limited-edition.jpg"
+              alt="Фото відкритої книги з рызними зображеннями"
+              width="370"
+            />
+            <h2 class="header-text">Видання Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/lab.jpg"
+              alt="Фото ярлику на якому великими літерами написано LAB EL TAG"
+              width="370"
+            />
+            <h2 class="header-text">Проєкт LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/growing-business.jpg"
+              alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом"
+              width="370"
+            />
+            <h2 class="header-text">Growing Business</h2>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer>
-        <!-- Підвал -->
-        <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-        <address>
-            <ul class="list">
-                <li class="physical-address">м. Київ, пр-т Лесі Українки, 26</li>
-                <li><a href="mailto:info@devstudio.com" class="footer">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+    <!-- Підвал -->
+    <footer class="footer">
+      <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+      <address>
+        <ul class="list">
+          <li>
+            <a
+              class="physical-address"
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
