index.html styles have been added

--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
       <!-- Hero block-->
       <section>
         <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <button class="button hero-button" type="button">Замовити послугу</button>
       </section>
 
       <!-- Наші переваги -->
       <section>
         <h2 class="hidden">Наші переваги</h2>
-        <ul class="list">
+        <ul class="list advantages">
           <li>
-            <h3 class="header-text">Увага до деталей</h3>
+            <h3 class="advantages-heder">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3 class="header-text">Пунктуальність</h3>
+            <h3 class="advantages-heder">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3 class="header-text">Планування</h3>
+            <h3 class="advantages-heder">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3 class="header-text">Сучасні технології</h3>
+            <h3 class="advantages-heder">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -63,7 +63,7 @@
 
       <!-- Чим ми займаємося -->
       <section>
-        <h2 class="header-text">Чим ми займаємося</h2>
+        <h2 class="h2-header">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img
@@ -91,27 +91,27 @@
 
       <!-- Наша команда -->
       <section>
-        <h2 class="header-text">Наша команда</h2>
+        <h2 class="h2-header">Наша команда</h2>
         <ul class="list">
           <li>
             <img src="./images/igor_demiyanenko.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="header-text">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="command command-header">Ігор Дем'яненко</h3>
+            <p class="command">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga_repina.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="header-text">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="command command-header">Ольга Рєпіна</h3>
+            <p class="command">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/mykola_tarasov.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="header-text">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="command command-header">Микола Тарасов</h3>
+            <p class="command">Marketing</p>
           </li>
           <li>
             <img src="./images/mykhailo_ermakov.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3 class="header-text">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="command command-header">Михайло Єрмаков</h3>
+            <p class="command">UI Designer</p>
           </li>
         </ul>
       </section>
