--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
       <!-- Фільтр -->
       <section>
         <ul class="list">
-          <li><button class="filter-button" type="button">Усі</button></li>
-          <li><button class="filter-button" type="button">Веб-сайти</button></li>
-          <li><button class="filter-button" type="button">Додатки</button></li>
-          <li><button class="filter-button" type="button">Дизайн</button></li>
-          <li><button class="filter-button" type="button">Маркетинг</button></li>
+          <li><button class="button filter-button" type="button">Усі</button></li>
+          <li><button class="button filter-button" type="button">Веб-сайти</button></li>
+          <li><button class="button filter-button" type="button">Додатки</button></li>
+          <li><button class="button filter-button" type="button">Дизайн</button></li>
+          <li><button class="button filter-button" type="button">Маркетинг</button></li>
         </ul>
 
         <!-- Проекти -->
