Hidden class have been changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <!-- Наші переваги -->
       <section>
-        <h2 class="hidden">Наші переваги</h2>
+        <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="list advantages">
           <li>
             <h3 class="advantages-heder">Увага до деталей</h3>
