--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
     </header>
 
     <main>
-      <h1 class="hidden">Портфоліо</h1>
       <!-- Фільтр -->
       <section>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="list">
           <li><button class="button filter-button" type="button">Усі</button></li>
           <li><button class="button filter-button" type="button">Веб-сайти</button></li>
